# picolimbo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
picolimbo/: Cargo.toml
picolimbo/res/: CODECS.md  codec_1_16.nbt  codec_1_18_2.nbt  codec_1_19_4.nbt  limbo.conf
picolimbo/res/codecs/: codec_1_19.nbt  codec_1_19_1.nbt  codec_legacy.nbt
picolimbo/src/: client.rs  config.rs  dim.rs  handle.rs  main.rs  player.rs  server.rs
picolimbo/src/proto/: handshake.rs  login.rs  mod.rs  play.rs
picolimbo_macros/: Cargo.toml
picolimbo_macros/src/: common.rs  dec.rs  enc.rs  lib.rs
picolimbo_proto/: Cargo.toml
picolimbo_proto/src/: error.rs  id.rs  lib.rs  read.rs  types.rs  ver.rs  write.rs
