[package]
name = "picolimbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
flume = "0.10.14"
futures-lite = "1.13.0"
hocon = { version = "0.9.0", default-features = false, features = ["serde-support"] }
lazy_static = "1.4.0"
lobsterchat = "0.4.2"
picolimbo_proto = { path = "../picolimbo_proto" }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["v4"] }
