[package]
name = "picolimbo_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
lobsterchat = { version = "0.4.2", default-features = false }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4"] }
